# multilib-example

./: Cargo.toml  README.md
.changes/: config.json
.github/workflows/: covector-status.yml
bindings/c/: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml  main.c
bindings/c/examples/: example.c
bindings/c/src/: lib.rs
bindings/nodejs/: .gitignore  README.md  package.json
bindings/nodejs/lib/: index.js
bindings/nodejs/native/: Cargo.toml
bindings/nodejs/native/src/: lib.rs
bindings/nodejs/tests/: greet.js
bindings/wasm/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
bindings/wasm/examples/: node.js  web.js
bindings/wasm/src/: lib.rs
bindings/wasm/static/: index.html
src/: lib.rs
