[package]
name = "multilib-example-c"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
multilib-example = { path = "../../" }

[build-dependencies]
cbindgen = "0.16.0"